--- a/packages/netlify-cms-app/package.json
+++ b/packages/netlify-cms-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netlify-cms-app",
+  "name": "@forgettingpasswords/netlify-cms-app",
   "description": "An extensible, open source, Git-based, React CMS for static sites. Reusable congiuration with React as peer.",
   "version": "2.9.8-beta.2",
   "homepage": "https://www.netlifycms.org",
@@ -25,30 +25,30 @@
     "immutable": "^3.7.6",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "netlify-cms-backend-bitbucket": "^2.4.1",
-    "netlify-cms-backend-git-gateway": "^2.4.5",
-    "netlify-cms-backend-github": "^2.5.0-beta.0",
-    "netlify-cms-backend-gitlab": "^2.3.2",
-    "netlify-cms-backend-test": "^2.2.3",
-    "netlify-cms-core": "^2.13.0-beta.2",
-    "netlify-cms-editor-component-image": "^2.4.2",
-    "netlify-cms-lib-auth": "^2.2.4",
-    "netlify-cms-lib-util": "^2.4.0-beta.0",
-    "netlify-cms-ui-default": "^2.7.0-beta.2",
-    "netlify-cms-widget-boolean": "^2.2.3",
-    "netlify-cms-widget-date": "^2.3.3",
-    "netlify-cms-widget-datetime": "^2.2.3",
-    "netlify-cms-widget-file": "^2.4.3",
-    "netlify-cms-widget-image": "^2.3.3",
-    "netlify-cms-widget-list": "^2.3.5",
-    "netlify-cms-widget-map": "^1.3.3",
-    "netlify-cms-widget-markdown": "^2.5.1",
-    "netlify-cms-widget-number": "^2.3.4",
-    "netlify-cms-widget-object": "^2.2.4",
-    "netlify-cms-widget-relation": "^2.4.1",
-    "netlify-cms-widget-select": "^2.4.3",
-    "netlify-cms-widget-string": "^2.2.3",
-    "netlify-cms-widget-text": "^2.2.3",
+    "@forgettingpasswords/netlify-cms-backend-bitbucket": "^2.4.1",
+    "@forgettingpasswords/netlify-cms-backend-git-gateway": "^2.4.5",
+    "@forgettingpasswords/netlify-cms-backend-github": "^2.5.0-beta.0",
+    "@forgettingpasswords/netlify-cms-backend-gitlab": "^2.3.2",
+    "@forgettingpasswords/netlify-cms-backend-test": "^2.2.3",
+    "@forgettingpasswords/netlify-cms-core": "^2.13.0-beta.2",
+    "@forgettingpasswords/netlify-cms-editor-component-image": "^2.4.2",
+    "@forgettingpasswords/netlify-cms-lib-auth": "^2.2.4",
+    "@forgettingpasswords/netlify-cms-lib-util": "^2.4.0-beta.0",
+    "@forgettingpasswords/netlify-cms-ui-default": "^2.7.0-beta.2",
+    "@forgettingpasswords/netlify-cms-widget-boolean": "^2.2.3",
+    "@forgettingpasswords/netlify-cms-widget-date": "^2.3.3",
+    "@forgettingpasswords/netlify-cms-widget-datetime": "^2.2.3",
+    "@forgettingpasswords/netlify-cms-widget-file": "^2.4.3",
+    "@forgettingpasswords/netlify-cms-widget-image": "^2.3.3",
+    "@forgettingpasswords/netlify-cms-widget-list": "^2.3.5",
+    "@forgettingpasswords/netlify-cms-widget-map": "^1.3.3",
+    "@forgettingpasswords/netlify-cms-widget-markdown": "^2.5.1",
+    "@forgettingpasswords/netlify-cms-widget-number": "^2.3.4",
+    "@forgettingpasswords/netlify-cms-widget-object": "^2.2.4",
+    "@forgettingpasswords/netlify-cms-widget-relation": "^2.4.1",
+    "@forgettingpasswords/netlify-cms-widget-select": "^2.4.3",
+    "@forgettingpasswords/netlify-cms-widget-string": "^2.2.3",
+    "@forgettingpasswords/netlify-cms-widget-text": "^2.2.3",
     "prop-types": "^15.7.2",
     "react-immutable-proptypes": "^2.1.0",
     "uuid": "^3.3.2"
@@ -56,5 +56,39 @@
   "peerDependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },
+  "_moduleAliases": {
+    "netlify-cms": "@forgettingpasswords/netlify-cms",
+    "netlify-cms-app": "@forgettingpasswords/netlify-cms-app",
+    "netlify-cms-backend-bitbucket": "@forgettingpasswords/netlify-cms-backend-bitbucket",
+    "netlify-cms-backend-git-gateway": "@forgettingpasswords/netlify-cms-backend-git-gateway",
+    "netlify-cms-backend-github": "@forgettingpasswords/netlify-cms-backend-github",
+    "netlify-cms-backend-gitlab": "@forgettingpasswords/netlify-cms-backend-gitlab",
+    "netlify-cms-backend-test": "@forgettingpasswords/netlify-cms-backend-test",
+    "netlify-cms-core": "@forgettingpasswords/netlify-cms-core",
+    "netlify-cms-default-exports": "@forgettingpasswords/netlify-cms-default-exports",
+    "netlify-cms-editor-component-image": "@forgettingpasswords/netlify-cms-editor-component-image",
+    "netlify-cms-lib-auth": "@forgettingpasswords/netlify-cms-lib-auth",
+    "netlify-cms-lib-util": "@forgettingpasswords/netlify-cms-lib-util",
+    "netlify-cms-media-library-cloudinary": "@forgettingpasswords/netlify-cms-media-library-cloudinary",
+    "netlify-cms-media-library-uploadcare": "@forgettingpasswords/netlify-cms-media-library-uploadcare",
+    "netlify-cms-ui-default": "@forgettingpasswords/netlify-cms-ui-default",
+    "netlify-cms-widget-boolean": "@forgettingpasswords/netlify-cms-widget-boolean",
+    "netlify-cms-widget-date": "@forgettingpasswords/netlify-cms-widget-date",
+    "netlify-cms-widget-datetime": "@forgettingpasswords/netlify-cms-widget-datetime",
+    "netlify-cms-widget-file": "@forgettingpasswords/netlify-cms-widget-file",
+    "netlify-cms-widget-image": "@forgettingpasswords/netlify-cms-widget-image",
+    "netlify-cms-widget-list": "@forgettingpasswords/netlify-cms-widget-list",
+    "netlify-cms-widget-map": "@forgettingpasswords/netlify-cms-widget-map",
+    "netlify-cms-widget-markdown": "@forgettingpasswords/netlify-cms-widget-markdown",
+    "netlify-cms-widget-number": "@forgettingpasswords/netlify-cms-widget-number",
+    "netlify-cms-widget-object": "@forgettingpasswords/netlify-cms-widget-object",
+    "netlify-cms-widget-relation": "@forgettingpasswords/netlify-cms-widget-relation",
+    "netlify-cms-widget-select": "@forgettingpasswords/netlify-cms-widget-select",
+    "netlify-cms-widget-string": "@forgettingpasswords/netlify-cms-widget-string",
+    "netlify-cms-widget-text": "@forgettingpasswords/netlify-cms-widget-text"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
