--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "jest-cli": "^24.5.0",
     "jest-dom": "^3.1.3",
     "jest-emotion": "^10.0.9",
+    "module-alias": "^2.2.2",
     "ncp": "^2.0.0",
     "nock": "^10.0.4",
     "node-fetch": "^2.3.0",
