chore(release): publish
 - @forgettingpasswords/netlify-cms-app@2.10.0-dpl.0
 - @forgettingpasswords/netlify-cms-backend-bitbucket@2.5.0
 - @forgettingpasswords/netlify-cms-backend-git-gateway@2.5.0
 - @forgettingpasswords/netlify-cms-backend-github@2.5.0-dpl.0
 - @forgettingpasswords/netlify-cms-backend-gitlab@2.4.0
 - @forgettingpasswords/netlify-cms-backend-test@2.3.0
 - @forgettingpasswords/netlify-cms-core@2.13.0-dpl.0
 - @forgettingpasswords/netlify-cms-default-exports@2.3.0
 - @forgettingpasswords/netlify-cms-editor-component-image@2.5.0
 - @forgettingpasswords/netlify-cms-lib-auth@2.3.0
 - @forgettingpasswords/netlify-cms-lib-util@2.4.0-dpl.0
 - @forgettingpasswords/netlify-cms-media-library-cloudinary@1.4.0
 - @forgettingpasswords/netlify-cms-media-library-uploadcare@0.6.0
 - @forgettingpasswords/netlify-cms-ui-default@2.7.0-dpl.0
 - @forgettingpasswords/netlify-cms-widget-boolean@2.3.0
 - @forgettingpasswords/netlify-cms-widget-date@2.4.0
 - @forgettingpasswords/netlify-cms-widget-datetime@2.3.0
 - @forgettingpasswords/netlify-cms-widget-file@2.5.0
 - @forgettingpasswords/netlify-cms-widget-image@2.4.0
 - @forgettingpasswords/netlify-cms-widget-list@2.4.0
 - @forgettingpasswords/netlify-cms-widget-map@1.4.0
 - @forgettingpasswords/netlify-cms-widget-markdown@2.6.0
 - @forgettingpasswords/netlify-cms-widget-number@2.4.0
 - @forgettingpasswords/netlify-cms-widget-object@2.3.0
 - @forgettingpasswords/netlify-cms-widget-relation@2.5.0
 - @forgettingpasswords/netlify-cms-widget-select@2.5.0
 - @forgettingpasswords/netlify-cms-widget-string@2.3.0
 - @forgettingpasswords/netlify-cms-widget-text@2.3.0
 - @forgettingpasswords/netlify-cms@2.10.0-dpl.0

--- a/packages/netlify-cms/package.json
+++ b/packages/netlify-cms/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms",
   "description": "An extensible, open source, Git-based, React CMS for static sites.",
-  "version": "2.9.8-beta.2",
+  "version": "2.10.0-dpl.0",
   "homepage": "https://www.netlifycms.org",
   "repository": "https://github.com/netlify/netlify-cms",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
@@ -20,9 +20,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@forgettingpasswords/netlify-cms-app": "^2.9.8-beta.2",
-    "@forgettingpasswords/netlify-cms-media-library-cloudinary": "^1.3.3",
-    "@forgettingpasswords/netlify-cms-media-library-uploadcare": "^0.5.3",
+    "@forgettingpasswords/netlify-cms-app": "^2.10.0-dpl.0",
+    "@forgettingpasswords/netlify-cms-media-library-cloudinary": "^1.4.0",
+    "@forgettingpasswords/netlify-cms-media-library-uploadcare": "^0.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
