--- a/packages/netlify-cms-app/package.json
+++ b/packages/netlify-cms-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms-app",
   "description": "An extensible, open source, Git-based, React CMS for static sites. Reusable congiuration with React as peer.",
-  "version": "2.9.8-beta.2",
+  "version": "2.10.0-dpl.0",
   "homepage": "https://www.netlifycms.org",
   "repository": "https://github.com/netlify/netlify-cms/tree/master/packages/netlify-cms-app",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
@@ -22,33 +22,33 @@
   "dependencies": {
     "@emotion/core": "^10.0.9",
     "@emotion/styled": "^10.0.9",
+    "@forgettingpasswords/netlify-cms-backend-bitbucket": "^2.5.0",
+    "@forgettingpasswords/netlify-cms-backend-git-gateway": "^2.5.0",
+    "@forgettingpasswords/netlify-cms-backend-github": "^2.5.0-dpl.0",
+    "@forgettingpasswords/netlify-cms-backend-gitlab": "^2.4.0",
+    "@forgettingpasswords/netlify-cms-backend-test": "^2.3.0",
+    "@forgettingpasswords/netlify-cms-core": "^2.13.0-dpl.0",
+    "@forgettingpasswords/netlify-cms-editor-component-image": "^2.5.0",
+    "@forgettingpasswords/netlify-cms-lib-auth": "^2.3.0",
+    "@forgettingpasswords/netlify-cms-lib-util": "^2.4.0-dpl.0",
+    "@forgettingpasswords/netlify-cms-ui-default": "^2.7.0-dpl.0",
+    "@forgettingpasswords/netlify-cms-widget-boolean": "^2.3.0",
+    "@forgettingpasswords/netlify-cms-widget-date": "^2.4.0",
+    "@forgettingpasswords/netlify-cms-widget-datetime": "^2.3.0",
+    "@forgettingpasswords/netlify-cms-widget-file": "^2.5.0",
+    "@forgettingpasswords/netlify-cms-widget-image": "^2.4.0",
+    "@forgettingpasswords/netlify-cms-widget-list": "^2.4.0",
+    "@forgettingpasswords/netlify-cms-widget-map": "^1.4.0",
+    "@forgettingpasswords/netlify-cms-widget-markdown": "^2.6.0",
+    "@forgettingpasswords/netlify-cms-widget-number": "^2.4.0",
+    "@forgettingpasswords/netlify-cms-widget-object": "^2.3.0",
+    "@forgettingpasswords/netlify-cms-widget-relation": "^2.5.0",
+    "@forgettingpasswords/netlify-cms-widget-select": "^2.5.0",
+    "@forgettingpasswords/netlify-cms-widget-string": "^2.3.0",
+    "@forgettingpasswords/netlify-cms-widget-text": "^2.3.0",
     "immutable": "^3.7.6",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "@forgettingpasswords/netlify-cms-backend-bitbucket": "^2.4.1",
-    "@forgettingpasswords/netlify-cms-backend-git-gateway": "^2.4.5",
-    "@forgettingpasswords/netlify-cms-backend-github": "^2.5.0-beta.0",
-    "@forgettingpasswords/netlify-cms-backend-gitlab": "^2.3.2",
-    "@forgettingpasswords/netlify-cms-backend-test": "^2.2.3",
-    "@forgettingpasswords/netlify-cms-core": "^2.13.0-beta.2",
-    "@forgettingpasswords/netlify-cms-editor-component-image": "^2.4.2",
-    "@forgettingpasswords/netlify-cms-lib-auth": "^2.2.4",
-    "@forgettingpasswords/netlify-cms-lib-util": "^2.4.0-beta.0",
-    "@forgettingpasswords/netlify-cms-ui-default": "^2.7.0-beta.2",
-    "@forgettingpasswords/netlify-cms-widget-boolean": "^2.2.3",
-    "@forgettingpasswords/netlify-cms-widget-date": "^2.3.3",
-    "@forgettingpasswords/netlify-cms-widget-datetime": "^2.2.3",
-    "@forgettingpasswords/netlify-cms-widget-file": "^2.4.3",
-    "@forgettingpasswords/netlify-cms-widget-image": "^2.3.3",
-    "@forgettingpasswords/netlify-cms-widget-list": "^2.3.5",
-    "@forgettingpasswords/netlify-cms-widget-map": "^1.3.3",
-    "@forgettingpasswords/netlify-cms-widget-markdown": "^2.5.1",
-    "@forgettingpasswords/netlify-cms-widget-number": "^2.3.4",
-    "@forgettingpasswords/netlify-cms-widget-object": "^2.2.4",
-    "@forgettingpasswords/netlify-cms-widget-relation": "^2.4.1",
-    "@forgettingpasswords/netlify-cms-widget-select": "^2.4.3",
-    "@forgettingpasswords/netlify-cms-widget-string": "^2.2.3",
-    "@forgettingpasswords/netlify-cms-widget-text": "^2.2.3",
     "prop-types": "^15.7.2",
     "react-immutable-proptypes": "^2.1.0",
     "uuid": "^3.3.2"
