--- a/packages/netlify-cms-ui-default/package.json
+++ b/packages/netlify-cms-ui-default/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms-ui-default",
   "description": "Default UI components for Netlify CMS.",
-  "version": "2.7.0-beta.2",
+  "version": "2.7.0-dpl.0",
   "repository": "https://github.com/netlify/netlify-cms/tree/master/packages/netlify-cms-ui-default",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
   "license": "MIT",
