--- a/packages/netlify-cms-core/package.json
+++ b/packages/netlify-cms-core/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scroll-sync": "^0.6.0",
+    "react-select": "^3.0.8",
     "react-sortable-hoc": "^1.0.0",
     "react-split-pane": "^0.1.85",
     "react-topbar-progress-indicator": "^2.0.0",
