--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "lint-quiet": "run-p -c --aggregate-output \"lint:* -- --quiet\"",
     "lint:css": "stylelint --ignore-path .gitignore \"{packages/**/*.{css,js},website/**/*.css}\"",
     "lint:js": "eslint --color --ignore-path .gitignore \"{{packages,scripts,website}/**/,}*.js\"",
-    "lint:format": "prettier \"{{packages,scripts,website}/**/,}*.{js,css}\" --list-different",
     "format": "run-s \"lint:css -- --fix --quiet\" \"lint:js -- --fix --quiet\" \"format:prettier -- --write\"",
     "format:prettier": "prettier \"{{packages,scripts,website}/**/,}*.{js,css}\"",
     "publish": "run-s publish:before-manual-version publish:after-manual-version",
@@ -100,6 +99,7 @@
     "jest-cli": "^24.5.0",
     "jest-dom": "^3.1.3",
     "jest-emotion": "^10.0.9",
+    "module-alias": "^2.2.2",
     "ncp": "^2.0.0",
     "nock": "^10.0.4",
     "node-fetch": "^2.3.0",
