--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
   "loglevel": "success",
   "command": {
     "version": {
-      "allowBranch": "DPL-Publish-Config",
+      "allowBranch": "DPL-LATEST",
       "conventionalCommits": true,
       "preid": "dpl",
       "gitRemote": "origin",
