--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "lint:js": "eslint --color --ignore-path .gitignore \"{{packages,scripts,website}/**/,}*.js\"",
     "format": "run-s \"lint:css -- --fix --quiet\" \"lint:js -- --fix --quiet\" \"format:prettier -- --write\"",
     "format:prettier": "prettier \"{{packages,scripts,website}/**/,}*.{js,css}\"",
+    "dpl:clean": "rimraf dist",
+    "dpl:publish": "run-s dpl:clean publish:before-manual-version dpl:publish:after-manual-version",
+    "dpl:publish:after-manual-version": "run-s build dpl:prepare-packages",
+    "dpl:prepare-packages": "node ./scripts/prepare-packages.js",
     "publish": "run-s publish:before-manual-version publish:after-manual-version",
     "publish:ci": "run-s publish:prepare \"publish:version --yes\" build publish:push-git \"publish:from-git --yes\"",
     "publish:before-manual-version": "run-s publish:prepare publish:version",
