chore(release): publish
 - @forgettingpasswords/netlify-cms-app@2.10.0-dpl.0
 - @forgettingpasswords/netlify-cms-backend-bitbucket@2.5.0
 - @forgettingpasswords/netlify-cms-backend-git-gateway@2.5.0
 - @forgettingpasswords/netlify-cms-backend-github@2.5.0-dpl.0
 - @forgettingpasswords/netlify-cms-backend-gitlab@2.4.0
 - @forgettingpasswords/netlify-cms-backend-test@2.3.0
 - @forgettingpasswords/netlify-cms-core@2.13.0-dpl.0
 - @forgettingpasswords/netlify-cms-default-exports@2.3.0
 - @forgettingpasswords/netlify-cms-editor-component-image@2.5.0
 - @forgettingpasswords/netlify-cms-lib-auth@2.3.0
 - @forgettingpasswords/netlify-cms-lib-util@2.4.0-dpl.0
 - @forgettingpasswords/netlify-cms-media-library-cloudinary@1.4.0
 - @forgettingpasswords/netlify-cms-media-library-uploadcare@0.6.0
 - @forgettingpasswords/netlify-cms-ui-default@2.7.0-dpl.0
 - @forgettingpasswords/netlify-cms-widget-boolean@2.3.0
 - @forgettingpasswords/netlify-cms-widget-date@2.4.0
 - @forgettingpasswords/netlify-cms-widget-datetime@2.3.0
 - @forgettingpasswords/netlify-cms-widget-file@2.5.0
 - @forgettingpasswords/netlify-cms-widget-image@2.4.0
 - @forgettingpasswords/netlify-cms-widget-list@2.4.0
 - @forgettingpasswords/netlify-cms-widget-map@1.4.0
 - @forgettingpasswords/netlify-cms-widget-markdown@2.6.0
 - @forgettingpasswords/netlify-cms-widget-number@2.4.0
 - @forgettingpasswords/netlify-cms-widget-object@2.3.0
 - @forgettingpasswords/netlify-cms-widget-relation@2.5.0
 - @forgettingpasswords/netlify-cms-widget-select@2.5.0
 - @forgettingpasswords/netlify-cms-widget-string@2.3.0
 - @forgettingpasswords/netlify-cms-widget-text@2.3.0
 - @forgettingpasswords/netlify-cms@2.10.0-dpl.0

--- a/packages/netlify-cms-backend-git-gateway/package.json
+++ b/packages/netlify-cms-backend-git-gateway/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms-backend-git-gateway",
   "description": "Git Gateway backend for Netlify CMS",
-  "version": "2.4.5",
+  "version": "2.5.0",
   "repository": "https://github.com/netlify/netlify-cms/tree/master/packages/netlify-cms-backend-git-gateway",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
   "module": "dist/esm/index.js",
@@ -73,5 +73,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "b4d36b39a3b333af712cfc66bafd70856b430e1c"
 }
