--- a/packages/netlify-cms-media-library-cloudinary/package.json
+++ b/packages/netlify-cms-media-library-cloudinary/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms-media-library-cloudinary",
   "description": "Cloudinary integration for Netlify CMS",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "repository": "https://github.com/netlify/netlify-cms/tree/master/packages/netlify-cms-media-library-cloudinary",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
   "module": "dist/esm/index.js",
@@ -60,5 +60,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "b4d36b39a3b333af712cfc66bafd70856b430e1c"
 }
