--- a/packages/netlify-cms-widget-map/package.json
+++ b/packages/netlify-cms-widget-map/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms-widget-map",
   "description": "Widget for editing spatial data in Netlify CMS.",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "homepage": "https://www.netlifycms.org/docs/widgets/#map",
   "repository": "https://github.com/netlify/netlify-cms/tree/master/packages/netlify-cms-widget-map",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
@@ -65,5 +65,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "b4d36b39a3b333af712cfc66bafd70856b430e1c"
 }
