--- a/packages/netlify-cms-widget-markdown/package.json
+++ b/packages/netlify-cms-widget-markdown/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms-widget-markdown",
   "description": "Widget for editing markdown in Netlify CMS.",
-  "version": "2.5.1",
+  "version": "2.6.0",
   "homepage": "https://www.netlifycms.org/docs/widgets/#markdown",
   "repository": "https://github.com/netlify/netlify-cms/tree/master/packages/netlify-cms-widget-markdown",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
@@ -85,5 +85,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "b4d36b39a3b333af712cfc66bafd70856b430e1c"
 }
