--- a/packages/netlify-cms-widget-number/package.json
+++ b/packages/netlify-cms-widget-number/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms-widget-number",
   "description": "Widget for editing numberic values in Netlify CMS.",
-  "version": "2.3.4",
+  "version": "2.4.0",
   "homepage": "https://www.netlifycms.org/docs/widgets/#number",
   "repository": "https://github.com/netlify/netlify-cms/tree/master/packages/netlify-cms-widget-number",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
@@ -58,5 +58,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "b4d36b39a3b333af712cfc66bafd70856b430e1c"
 }
