--- a/packages/netlify-cms-widget-text/package.json
+++ b/packages/netlify-cms-widget-text/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@forgettingpasswords/netlify-cms-widget-text",
   "description": "Widget for editing multiline plain string values in Netlify CMS.",
-  "version": "2.2.3",
+  "version": "2.3.0",
   "homepage": "https://www.netlifycms.org/docs/widgets/#text",
   "repository": "https://github.com/netlify/netlify-cms/tree/master/packages/netlify-cms-widget-text",
   "bugs": "https://github.com/netlify/netlify-cms/issues",
@@ -64,5 +64,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "b4d36b39a3b333af712cfc66bafd70856b430e1c"
 }
